--- a/ENGR114-Labs/Lab07-Taylor_Series/ENGR114-Lab07-Taylor_Series.ipynb
+++ b/ENGR114-Labs/Lab07-Taylor_Series/ENGR114-Lab07-Taylor_Series.ipynb
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Taylor Series expansion for our two functions  $e^x$ and $\\sin(x)$  are below:\n",
+    "The Taylor Series expansion for our two functions  $e^x$ and $\\sin(x)$ are below:\n",
     "\n",
     "$$  {e^x} = \\sum\\limits_{n = 0}^\\infty  {\\frac{{{x^n}}}{{n!}}}  = 1 + x + \\frac{{{x^2}}}{{2!}} + \\frac{{{x^3}}}{{3!}} + \\frac{{{x^4}}}{{4!}} + ... $$\n",
     " \n",
@@ -124,7 +124,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -145,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
